py-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask-deployment
spec:
  selector:
    matchLabels:
      app: python-flask
  replicas: 2
  template:
    metadata:
      labels:
        app: python-flask
    spec:
      containers:
        - name: python-flask
          image: steingrim/python-flask:0.0.3
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "250m"
