sw-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: star-wars-deployment
spec:
  selector:
    matchLabels:
      app: star-wars
  replicas: 2
  template:
    metadata:
      labels:
        app: star-wars
    spec:
      containers:
        - name: star-wars
          image: starwars-node
          ports:
            - containerPort: 3000
          imagePullPolicy: Never
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "250m"
