py-service.yml
apiVersion: v1
kind: Service
metadata:
  name: py-service
spec:
  selector:
    app: python-flask
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 32000
