ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: sw-service
            port:
              number: 3000

      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: py-service
            port:
              number: 5000
